@@ -193,6 +193,7 @@
     <module id="gnome-schedule"/>
     <module id="gnome-sharing"/>
     <module id="gnome-spell"/>
+    <module id="gnome-subtitles"/>
     <module id="gnome-themes-extras"/>
     <module id="gnome-torrent"/>
     <module id="gnome-user-share"/>
