@@ -1,3 +1,8 @@
+2007-05-17  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Add new module gnome-subtitles in Extras.
+
 2007-05-15  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
